@@ -1,27 +1,23 @@
 /**
  * Copyright (C) 2000 - 2012 Silverpeas
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
+ * This program is free software: you can redistribute it and/or modify it under the terms of the
+ * GNU Affero General Public License as published by the Free Software Foundation, either version 3
+ * of the License, or (at your option) any later version.
  *
- * As a special exception to the terms and conditions of version 3.0 of
- * the GPL, you may redistribute this Program in connection with Free/Libre
- * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have received a copy of the text describing
- * the FLOSS exception, and it is also available here:
+ * As a special exception to the terms and conditions of version 3.0 of the GPL, you may
+ * redistribute this Program in connection with Free/Libre Open Source Software ("FLOSS")
+ * applications as described in Silverpeas's FLOSS exception. You should have received a copy of the
+ * text describing the FLOSS exception, and it is also available here:
  * "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
+ * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ * Affero General Public License for more details.
  *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * You should have received a copy of the GNU Affero General Public License along with this program.
+ * If not, see <http://www.gnu.org/licenses/>.
  */
-
 package org.silverpeas.servlets;
 
 import java.net.URLEncoder;
@@ -31,22 +27,24 @@ import javax.servlet.http.HttpServletResponse;
 
 import com.silverpeas.peasUtil.GoTo;
 import com.silverpeas.util.StringUtil;
+
 import com.stratelia.silverpeas.peasCore.URLManager;
 import com.stratelia.silverpeas.silvertrace.SilverTrace;
 import com.stratelia.webactiv.util.EJBUtilitaire;
 import com.stratelia.webactiv.util.JNDINames;
 import com.stratelia.webactiv.util.publication.control.PublicationBm;
-import com.stratelia.webactiv.util.publication.control.PublicationBmHome;
 import com.stratelia.webactiv.util.publication.model.PublicationDetail;
 import com.stratelia.webactiv.util.publication.model.PublicationPK;
+
+import org.apache.commons.lang3.CharEncoding;
 
 public class GoToPublication extends GoTo {
 
   private static final long serialVersionUID = -5940054543777929024L;
 
   @Override
-  public String getDestination(String objectId, HttpServletRequest req,
-      HttpServletResponse res) throws Exception {
+  public String getDestination(String objectId, HttpServletRequest req, HttpServletResponse res)
+      throws Exception {
     PublicationPK pubPK = new PublicationPK(objectId);
     PublicationDetail pub = getPublicationBm().getDetail(pubPK);
 
@@ -55,25 +53,20 @@ public class GoToPublication extends GoTo {
     if (!StringUtil.isDefined(componentId)) {
       componentId = pub.getPK().getInstanceId();
     }
-
     // Set GEF and look helper space identifier
     setGefSpaceId(req, componentId);
-
     SilverTrace.info("peasUtil", "GoToPublication.doPost", "root.MSG_GEN_PARAM_VALUE",
         "componentId = " + componentId);
     String gotoURL = URLManager.getURL(null, componentId) + pub.getURL();
-    return "goto=" + URLEncoder.encode(gotoURL, "UTF-8");
+    return "goto=" + URLEncoder.encode(gotoURL, CharEncoding.UTF_8);
   }
 
   private PublicationBm getPublicationBm() {
-    PublicationBm currentPublicationBm = null;
     try {
-      PublicationBmHome publicationBmHome = EJBUtilitaire.getEJBObjectRef(
-          JNDINames.PUBLICATIONBM_EJBHOME, PublicationBmHome.class);
-      currentPublicationBm = publicationBmHome.create();
+      return EJBUtilitaire.getEJBObjectRef(JNDINames.PUBLICATIONBM_EJBHOME, PublicationBm.class);
     } catch (Exception e) {
       displayError(null);
     }
-    return currentPublicationBm;
+    return null;
   }
 }
